--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
   <h1>Workout Rep Counter</h1>
-  <!-- Set fixed dimensions for consistency -->
-  <video id="video" playsinline autoplay muted width="600" height="500"></video>
+  
+  <!-- We’ll hide this video element (no need to show raw HTML video). -->
+  <video id="video" width="600" height="500" playsinline autoplay muted style="display: none;"></video>
+  
+  <!-- The canvas will show the video feed + keypoints -->
   <canvas id="output" width="600" height="500"></canvas>
+  
   <div id="repCount">Reps: 0</div>
+
+  <!-- TensorFlow + PoseNet -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet@2.2.1/dist/posenet.min.js"></script>
+  
+  <!-- Your main logic -->
   <script src="script.js"></script>
 </body>
 </html>
