attempt to fix issue witth loading

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <div id="repCount">Reps: 0</div>
   <div id="feedback"></div>
 
-  <!-- TensorFlow and PoseNet -->
+  <!-- TensorFlow and PoseNet libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet@2.2.1/dist/posenet.min.js"></script>
   
-  <!-- Universal state module must come first -->
+  <!-- Universal state module (must be loaded before main script) -->
   <script src="universalState.js"></script>
   
   <!-- Main script -->
