added state display

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <canvas id="output" width="600" height="500"></canvas>
   <div id="repCount">Reps: 0</div>
   <div id="feedback"></div>
+  <!-- New element to display the current posture -->
+  <div id="postureStatus">Current posture: unknown</div>
 
   <!-- TensorFlow and PoseNet libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
